# WorthIT

./: .cursorrules  .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  TEMPLATE.md  compose.dev.yaml  compose.prod.yaml  compose.yaml  config.env  pyproject.toml
.github/workflows/: ci-cd.yml
app/: __init__.py  config.py  database.py  main.py  models.py  schemas.py
app/engine/: __init__.py  paths.py  schemas.py
app/engine/loaders/: __init__.py  food.py  geo.py  weather.py
app/engine/planning/: __init__.py  day_plans.py
app/engine/routing/: __init__.py  network.py
app/engine/scoring/: __init__.py  experience.py  weather.py
app/routers/: health.py  places.py  recommendations.py
docs/: DEPLOY.md  PROJECT_CONTEXT.md  secrets.md  server-setup.md
frontend/: Dockerfile  docker-entrypoint.dev.sh  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: PlanBrowser.tsx  PlanCard.tsx  PreferencesForm.tsx
frontend/lib/: api.ts  types.ts
scripts/: deploy.sh  init-project.sh  load-env.sh
tests/: conftest.py  test_engine.py  test_health.py  test_places_schema.py
