# Python project configuration — used by uv locally, in CI, and inside Docker.

[project]
name = "hello-homelab"
version = "0.1.0"
description = "Reference app for laptop-to-homelab CI/CD workflows"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.3",
]

# Dev-only deps — installed with `uv sync` but not required at runtime in production
[dependency-groups]
dev = [
    "pytest>=8.0",
]

# pytest config — pythonpath lets tests import `from app.main import app`
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
