# WorthIT API — FastAPI backend

[project]
name = "worthit"
version = "0.1.0"
description = "High-value experience planning — joy per pound"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "pydantic-settings>=2.7",
    "pandas>=3.0.3",
    "pyarrow>=24.0.0",
    "networkx>=3.6.1",
    "numpy>=2.5.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "httpx>=0.28",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "integration: requires data/raw parquet files; auto-skipped when absent",
]
